--- a/doc/dokumentace.tex
+++ b/doc/dokumentace.tex
@@ -37,7 +37,7 @@
 
 \section{Úvod}
 
-Táto práca popisuje implementáciu simulačného jadra, ktorého funkčnosť bude overená na ukážkových príkladoch.
+Táto práca popisuje implementáciu simulačného jadra vo forme programovej knižnice. Funkčnosť bude overená na ukážkových príkladoch.
 %Úvod musí vysvětlit, proč se celá práce dělá a proč má uživatel výsledků váš dokument číst
 %(prosím, projekt sice děláte pro získání zápočtu v IMS, ale mohou existovat i jiné důvody). Případně, co se při čtení dozví.
 %
@@ -46,7 +46,8 @@ Táto práca popisuje implementáciu simulačného jadra, ktorého funkčnosť b
 %    v této práci je řešena implementace ..., která bude použita pro sestavení modelu ...
 %    na základě modelu a simulačních experimentů bude ukázáno chování systému ... v podmínkách ...
 %    smyslem experimentů je demonstrovat, že pokud by ..., pak by ...
-%    Poznámka: u vyžádaných zpráv se může uvést, že zpráva vznikla na základě požadavku ... (u školní práce takto zdůvod'novat projekt ovšem nelze, že). Je velmi praktické zdůvodnit, v čem je práce náročná a proto přínos autora nepopiratelný (např. pro zpracování modelu bylo nutno nastudovat ..., zpracovat, ... model je ve svém oboru zajímavý/ojedinělý v ...).
+%    Poznámka: u vyžádaných zpráv se může uvést, že zpráva vznikla na základě požadavku ... (u školní práce takto zdůvod'novat projekt ovšem nelze, že).
+%Je velmi praktické zdůvodnit, v čem je práce náročná a proto přínos autora nepopiratelný (např. pro zpracování modelu bylo nutno nastudovat ..., zpracovat, ... model je ve svém oboru zajímavý/ojedinělý v ...).
 %Podkapitoly:
 %
 %    kapitola 1.1: Kdo se na práci podílel jako autor, odborný konzultant, dodavatel odborných faktů, význačné zdroje literatury/fakt, ...
@@ -54,9 +55,12 @@ Táto práca popisuje implementáciu simulačného jadra, ktorého funkčnosť b
 %        pokud nebudete mít odborného konzultanta, nevadí. Nelze ovšem tvrdit, že jste celé dílo vymysleli s nulovou interakcí s okolím a literaturou.
 %    kapitola 1.2: V jakém prostředí a za jakých podmínek probíhalo experimentální ověřování validity modelu – pokud čtenář/zadavatel vaší zprávy neuvěří ve validitu vašeho modelu, obvykle vaši práci odmítne už v tomto okamžiku.
 
-\subsection{Spoluautorstvo}
+\subsection{Zdroje faktov}
+Práca vychádza zväčša zo študijnej opory\cite{opora} a existujúcej simulačnej knižnice SIMLIB\footnote{\url{http://www.fit.vutbr.cz/~peringer/SIMLIB/}}, ktorá slúžíla ako predloha pre rozhranie námi vytvorenej knižnice.
 
-\subsection{}
+\subsection{Validita modelu}
+Overenie funkčnosti simulátoru bude vykonané v ďalsích kapitolách na zvolených príkladoch prezentovaných na demonštračných cvičeniach
+predmetu IMS.
 
 \section{Rozbor tématu a použitých metod/technologií}
 
