--- a/doc/literatura.bib
+++ b/doc/literatura.bib
@@ -40,13 +40,13 @@
     pages = "1",
 }
 
-@ONLINE{xilinx:fpga,
-    author = "Xilinx",
-    title = "What is a FPGA?",
+@misc{lambda,
+    author = "Steve Clamage",
+    title = "How to Use Lambda Expressions in C++11",
     year = "2014",
-    cited = "22.\,4.\,2014",
-    publisher = "Xilinx Inc.",
-    url = "http://www.origin.xilinx.com/fpga/"
+    cited = "6.\,12.\,2015",
+    publisher = "Oracle",
+    url = "{\scriptsize http://www.oracle.com/technetwork/articles/servers-storage-dev/howto-use-lambda-exp-cpp11-2189895.html}"
 }
 
 @ONLINE{ni:fpga,
