--- a/doc/literatura.bib
+++ b/doc/literatura.bib
@@ -49,6 +49,13 @@
     url = "{\scriptsize http://www.oracle.com/technetwork/articles/servers-storage-dev/howto-use-lambda-exp-cpp11-2189895.html}"
 }
 
+@misc{demo1,
+    author = "Martin Hrubý",
+    title = "Demonstrační cvičení IMS 1 -- Diskrétní modelování a SIMLIB\/C++",
+    cited = "6.\,12.\,2015",
+    url = "http://perchta.fit.vutbr.cz/vyuka-ims/uploads/1/ims-demo1.pdf"
+}
+
 @ONLINE{ni:fpga,
     author = "National Instruments",
     title = "NI FPGA",
