--- a/doc/dokumentace.tex
+++ b/doc/dokumentace.tex
@@ -120,7 +120,7 @@ Prvý model\cite[slide 22]{demo1}, ktorý je zámerne vybraný pre možnosť odt
 \begin{itemize}
     \item Transakciu \texttt{krava} s počtom 100ks
     \item Dve transakcie \texttt{auto}, ktoré sa starajú o odvoz mlieka z obslužných liniek
-    \item Obslužnú linku \texttt{dojičky} s kapacitou
+    \item Obslužnú linku \texttt{dojičky} s kapacitou 3
     \item Sklad na dočasné uloženie nádob po dobu kým sa naložia do auta
 \end{itemize}
 
